# transithub

./: .gitignore  LICENSE  README.md  config.example.yaml  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: scene-framework.md
docs/superpowers/plans/: 2026-05-25-birthday-takeover.md  2026-05-25-delay-suspension-plane-audit.md
scripts/: find_station.py  panel-test.py  reduce-flicker.sh  setup-autostart.sh  update.sh
src/transithub/: __init__.py  __main__.py  birthdays.py  clock.py  config.py  health.py  models.py  profile.py  store.py
src/transithub/display/: base.py  fonts.py  (+8 more)
systemd/: transithub-update.service  transithub.service
tests/: test_alerts.py  test_birthdays.py  test_bullets.py  test_clock.py  test_config.py  test_dimmer.py  test_director.py  test_feed.py  test_fonts.py  test_health.py  test_integration.py  test_local_events.py  test_local_markets.py  test_matrix_options.py  test_models.py  test_profile.py  test_scene_alert.py  test_scene_birthday.py  test_scene_health.py  test_scene_local.py  test_scene_sky.py  test_scene_space.py  test_scene_sun.py  test_scene_weather.py  test_scenery.py  test_scenes_base.py  test_sign.py  test_simulator.py  test_sky_iss.py  test_sky_planes.py  test_sources.py  test_space_epic.py  test_space_humans.py  test_stations.py  test_store.py  test_weather_client.py  test_weather_model.py
tests/fixtures/: adsb_states.json  alerts_sample.json  epic_natural.json  events_sample.json  hexdb_route.json  iss_tle.txt  markets_sample.json  open_meteo_aqi.json  open_meteo_forecast.json  opensky_states.json  tiny.bdf
(+27 files in other folders)
