[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "transithub"
version = "0.1.0"
description = "Live NYC subway arrivals and weather on a Raspberry Pi LED matrix, styled like a real MTA sign"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Kyran Adams" }]
keywords = ["nyc", "subway", "mta", "transit", "weather", "led-matrix", "rgb-matrix", "raspberry-pi"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Graphics",
]
dependencies = ["nyct-gtfs>=2.0.0", "Pillow>=9.0", "PyYAML>=6.0", "sgp4>=2.20", "tzdata>=2024.1"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/kyranstar/transithub"
Repository = "https://github.com/kyranstar/transithub"
Issues = "https://github.com/kyranstar/transithub/issues"

[project.scripts]
transithub = "transithub.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
transithub = ["mta/Stations.csv", "display/fonts/*.bdf", "display/fonts/LICENSE.spleen"]
